# swarm_life

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  VIDEO_README.md  particle_life_research.md  pyproject.toml  requirements_video.txt  test_direct.py  test_ws_client.py
backend/: api.py  config.py  presets.py  simulation.py
behavior_reproduction/: PLAN.md  flocking.py  galaxy.py  microrobot_collectives.py  planet.py
characterization/: PLAN.md  make_grids.py  make_metric_slides.py  make_slides.py  plot_heatmaps.py  plot_results.py  sweep_2species.py  sweep_metrics.py
crazyflie_deployment/: .gitignore  FLEET.md  PLAN.md  SETUP.md  SIM_DESIGN.md
crazyflie_deployment/src/particle_life/: package.xml  setup.cfg  setup.py
crazyflie_deployment/src/particle_life/launch/: circle_all.launch.py  flight_test.launch.py  flight_test_all.launch.py  hover_all.launch.py  hover_one.launch.py  hover_test.launch.py  particle_life.launch.py  vicon_test.launch.py
crazyflie_deployment/src/particle_life/particle_life/: _launch_logging.py  circle_all.py  fake_server.py  flight_logger.py  flight_test.py  flight_test_all.py  force_controller.py  hover_all.py  hover_one.py  hover_test.py  particle_life.py  particle_life_node.py  setpoint_adapter.py  viewer.py
frontend/: debug.html  fixed.html  index.html  index_working.html  main.js  simple.html  styles.css  test.html
presets/: 2_chase.json  2_dynamically_rotate.json  2_encapsulate.json  2_move_together.json  2_sun_earth.json  3_chase.json  3_encapsulate.json  3_encapsulate_rotate.json  3_move_horizentally.json  3_planet.json  (+3 more)
(+49 files in other folders)
