[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-life"
version = "0.1.0"
description = "Particle Life sandbox with FastAPI backend and canvas frontend."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0,<3.0.0",
    "aiofiles>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["I"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
