<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>particle_life</name>
  <version>0.1.0</version>
  <description>Particle life swarm behaviors on Crazyflie drones via Crazyswarm2</description>
  <maintainer email="xxinyue@umich.edu">xxinyue</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>crazyflie_py</depend>
  <depend>crazyflie_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
